--- a/cnc.html
+++ b/cnc.html
@@ -25,6 +25,7 @@
     <script src="./js/sox/Transducer.js"></script>
     <script src="./js/sox/SensorData.js"></script>
     <script src="./js/cnc.js"></script>
+    <script src="./js/common_japan.js"></script>
     <script src="./js/jquery.cookie.min.js"></script>
   </head>
   <body>
@@ -35,12 +36,18 @@
         <img class="flag" src="./img/flag-jp.png"></img>
         </h2>
         <div class="data-area">
-          <!--
-          <p>今日の空気キレイ度</p>
-          <div id="mitaka-smile" class="data">
+          <p class="data-header air-header">環境指数</p>
+          <div id="mitaka-air" class="data">
             0
           </div>
-          //-->
+          <p class="data-header living-header">生活指数</p>
+          <div id="mitaka-living" class="data">
+            0
+          </div>
+          <p class="data-header washing-header">洗濯指数</p>
+          <div id="mitaka-washing" class="data">
+            0
+          </div>
           <p>今日集まったいいね</p>
           <p>
           <img class="smile" src="./img/smile.png">
@@ -54,12 +61,18 @@
         <img class="flag" src="./img/flag-it.png"></img>
         </h2>
         <div class="data-area">
-          <!--
-          <p>今日の空気キレイ度</p>
-          <div id="genova-smile" class="data">
+          <p class="data-header air-header">環境指数</p>
+          <div id="genova-air" class="data">
             0
           </div>
-          //-->
+          <p class="data-header living-header">生活指数</p>
+          <div id="genova-living" class="data">
+            0
+          </div>
+          <p class="data-header washing-header">洗濯指数</p>
+          <div id="genova-washing" class="data">
+            0
+          </div>
           <p>今日集まったいいね</p>
           <p>
           <img class="smile" src="./img/smile.png">
@@ -73,12 +86,18 @@
         <img class="flag" src="./img/flag-es.png"></img>
         </h2>
         <div class="data-area">
-          <!--
-          <p>今日の空気キレイ度</p>
-          <div id="santander-smile" class="data">
+          <p class="data-header air-header">環境指数</p>
+          <div id="santander-air" class="data">
             0
           </div>
-          //-->
+          <p class="data-header living-header">生活指数</p>
+          <div id="santander-living" class="data">
+            0
+          </div>
+          <p class="data-header washing-header">洗濯指数</p>
+          <div id="santander-washing" class="data">
+            0
+          </div>
           <p>今日集まったいいね</p>
           <p>
           <img class="smile" src="./img/smile.png">
@@ -92,12 +111,18 @@
         <img class="flag" src="./img/flag-jp.png"></img>
         </h2>
         <div class="data-area">
-          <!--
-          <p>今日の空気キレイ度</p>
-          <div id="fujisawa-smile" class="data">
+          <p class="data-header air-header">環境指数</p>
+          <div id="fujisawa-air" class="data">
             0
           </div>
-          //-->
+          <p class="data-header living-header">生活指数</p>
+          <div id="fujisawa-living" class="data">
+            0
+          </div>
+          <p class="data-header washing-header">洗濯指数</p>
+          <div id="fujisawa-washing" class="data">
+            0
+          </div>
           <p>今日集まったいいね</p>
           <p>
           <img class="smile" src="./img/smile.png"></img>
