--- a/fujisawa.html
+++ b/fujisawa.html
@@ -94,15 +94,18 @@
         </div>
       </div>
       <div id="dry" class="inner-contents mini">
-        <h2>乾燥度</h2>
+        <h2>環境指数</h2>
         <div class="data-area">
-          <div id="dry-desc" class="data">今日はあまり乾燥していないみたい</div>
+        <p>指数：
+          <span id="environmental-index" class="data">10</span>
+        </p>
+          <div id="environmental-desc" class="data">0〜100で表わされるよ。指数が高いほどよい環境。</div>
         </div>
       </div>
       <div id="raining-rate" class="inner-contents mini">
-        <h2>降水確率</h2>
+        <h2>今日集まったいいね</h2>
         <div class="data-area">
-          <span id="raining-desc" class="data">20%</span>
+          <span id="smile-desc" class="data">10</span>
         </div>
       </div>
     </div>
